--- a/h2tshop/Views/Cart/Index.cshtml
+++ b/h2tshop/Views/Cart/Index.cshtml
@@ -50,7 +50,7 @@
             }
         </div>
         <div style="box-sizing:border-box;padding:40px;border:1px solid #f2ecec;" class="col-md-4">
-            <form action="" method="post">
+            <form action="/Cart/ThanhToan" method="post">
                 <h3>Thông tin đơn hàng</h3>
                 <hr />
                 <p>Tổng tiền:  <span id="tongtien" style="color:red;font-size:20px; font-weight:600">@ViewBag.tongtien vnd</span></p>
