--- a/h2tshop/Views/Product/Detail.cshtml
+++ b/h2tshop/Views/Product/Detail.cshtml
@@ -73,7 +73,7 @@
                 </div>
                 <div style="margin-top:10px;">
                     <input type="submit" value="Thêm vào giỏ hàng" class="btn btn-warning">
-                    <button type="button" class="btn btn-info">Tiếp tục mua</button>
+                    <a href="/home/index" class="btn btn-info">Tiếp tục mua</a>
                 </div>
                 <div class="describe">
                     <h5>Mô tả</h5>
