--- a/h2tshop/Views/Shared/_Layout.cshtml
+++ b/h2tshop/Views/Shared/_Layout.cshtml
@@ -225,16 +225,16 @@
                     </div>
                     <div style="padding:5px;" class="col-md-1">
                         <div style="z-index:999999;" class="form-popup" id="myForm">
-                            <form action="" class="form-container">
+                            <form action="/Account/Login" method="post" class="form-container">
                                 <h1>Login</h1>
 
-                                <label for="email"><b>Email</b></label>
-                                <input type="text" placeholder="Enter Email" name="email" required>
+                                <label for="email"><b>Username</b></label>
+                                <input type="text" placeholder="Enter Email" name="username" required>
 
                                 <label for="psw"><b>Password</b></label>
-                                <input type="password" placeholder="Enter Password" name="psw" required>
-
-                                <button type="submit" class="btn">Login</button>
+                                <input type="password" placeholder="Enter Password" name="pass" required>
+                                 
+                                <input type="submit" class="btn" value="Login">
                                 <button type="submit" class="btn cancel" onclick="closeForm()">Close</button>
                             </form>
                         </div>
