--- a/h2tshop/Views/Shared/_Layout_ad.cshtml
+++ b/h2tshop/Views/Shared/_Layout_ad.cshtml
@@ -54,10 +54,10 @@
                 <hr />
                 <ul>
                     <li><a href="#"> <i class="fas fa-camera"></i> Dash Broard</a></li>
-                    <li><a href="#"> <i class="fas fa-tshirt"></i> Quản lý sản phẩm</a></li>
-                    <li><a href="#"> <i class="fas fa-cart-plus"></i> Quản lý đơn hàng</a></li>
-                    <li><a href="#"> <i class="fas fa-list-ul"></i> Quản lý loại Sản phẩm</a></li>
-                    <li><a href="#"><i class="fas fa-user-circle"></i> Quản lý tài khoản</a></li>
+                    <li><a href="/Admin/QuanLySanPham"> <i class="fas fa-tshirt"></i> Quản lý sản phẩm</a></li>
+                    <li><a href="/Admin/QuanLyDonHang"> <i class="fas fa-cart-plus"></i> Quản lý đơn hàng</a></li>
+                    <li><a href="/Admin/QuanLyLoaiSanPham"> <i class="fas fa-list-ul"></i> Quản lý loại Sản phẩm</a></li>
+                    <li><a href="/Admin/QuanLyTaiKhoan"><i class="fas fa-user-circle"></i> Quản lý tài khoản</a></li>
                     <li><a href="/Account/login"><i class="fas fa-sign-out-alt"></i> Đăng xuất</a></li>
                 </ul>
             </div>
