--- a/h2tshop/Views/Shared/_Layout_ad.cshtml
+++ b/h2tshop/Views/Shared/_Layout_ad.cshtml
@@ -48,12 +48,12 @@
 
     <div style="width: 100%;" class="containerAd">
         <div class="row">
-            <div class="col-md-3 navigationMenu">
+            <div class="col-md-2 navigationMenu">
                 <i style="display:block;margin: 0 auto;color: cornflowerblue;font-size:30px;" class="fas fa-cat"></i>
                 <h5 style="text-align:center;">Administrator</h5>
                 <hr />
                 <ul>
-                    <li><a href="#"> <i class="fas fa-camera"></i> Dash Broard</a></li>
+                    <li><a href="/Admin/Index"> <i class="fas fa-camera"></i> Dash Broard</a></li>
                     <li><a href="/Admin/QuanLySanPham"> <i class="fas fa-tshirt"></i> Quản lý sản phẩm</a></li>
                     <li><a href="/Admin/QuanLyDonHang"> <i class="fas fa-cart-plus"></i> Quản lý đơn hàng</a></li>
                     <li><a href="/Admin/QuanLyLoaiSanPham"> <i class="fas fa-list-ul"></i> Quản lý loại Sản phẩm</a></li>
@@ -61,7 +61,7 @@
                     <li><a href="/Account/login"><i class="fas fa-sign-out-alt"></i> Đăng xuất</a></li>
                 </ul>
             </div>
-            <div style="padding:5px;" class="col-md-9">
+            <div style="padding:5px;" class="col-md-10">
                 <div class="form-search">
                     <form style="text-align:center;display:block;padding:10px;" >
                         <input style="display: inline-block; width:90%;" type="text" class="form-control" placeholder="Search">
