--- a/h2tshop/Views/Admin/Index.cshtml
+++ b/h2tshop/Views/Admin/Index.cshtml
@@ -40,7 +40,7 @@
             labels: ['T1', 'T2', 'T3', 'T4', 'T5', 'T6', 'T7', 'T8', 'T9', 'T10', 'T11', 'T12'],
             datasets: [{
                 label: 'Doanh thu 2021',
-                data: [12, 19, 3, 5, 2, 3, 12, 19, 3, 5, 2, 3],
+                data: [@ViewBag.dt.Thang1, @ViewBag.dt.Thang2, @ViewBag.dt.Thang3, @ViewBag.dt.Thang4, @ViewBag.dt.Thang5, @ViewBag.dt.Thang6, @ViewBag.dt.Thang7, @ViewBag.dt.Thang8, @ViewBag.dt.Thang9, @ViewBag.dt.Thang10, @ViewBag.dt.Thang11, @ViewBag.dt.Thang12],
                 backgroundColor: [
                     'rgba(255, 99, 132, 0.2)',
                     'rgba(54, 162, 235, 0.2)',
