--- a/h2tshop/Views/Admin/QuanLyDonHang.cshtml
+++ b/h2tshop/Views/Admin/QuanLyDonHang.cshtml
@@ -12,70 +12,141 @@
     th {
         padding: 5px;
     }
-  
+    .title_cagetory {
+        color: black;
+        font-family: 'Adobe Devanagari';
+        display: inline-block;
+        text-align: center;
+        font-size: 35px;
+        margin: 0 auto;
+    }
+
+        .title_cagetory:hover {
+            color: orange;
+        }
+
+    .itemProduct {
+        box-sizing: border-box;
+        padding: 20px;
+    }
+
+        .itemProduct img {
+            width: 100%;
+            height: auto;
+        }
+
+        .itemProduct h3 {
+            color: black;
+            font-size: 15px;
+        }
+
+            .itemProduct h3:hover {
+                color: orange;
+            }
+
+    a {
+        text-decoration: none !important;
+    }
 
         
 </style>
 <h4 style="color: deepskyblue;">Danh sách đơn hàng</h4>
-<div style="width: 100%;" class="container_donHang">
-    <table border="1" >
-        <tr>
+<div style="width: 100%;margin-top: 20px;">
+    <div class="class=" row" form-check">
+      
+        <div class="col-md-4">
+            @if (ViewBag.type == 0)
+            {
+                <input class="form-check-input" onchange="formSubmit(this)" type="radio" name="gridRadios" id="gridRadios1" value="chua" checked>
+            }
+            else
+            {
+                <input class="form-check-input" onchange="formSubmit(this)" type="radio" name="gridRadios" id="gridRadios1" value="chua" >
+            }
+            <label class="form-check-label" for="gridRadios1">
+                Chưa xác nhận
+            </label>
+        </div>
+        <div class="col-md-4">
+            @if (ViewBag.type == 1)
+            {
+            <input class="form-check-input" type="radio" onchange="formSubmit(this)" name="gridRadios" id="gridRadios2" value="roi" checked>
+            }
+            else
+            {
+              <input class="form-check-input" type="radio" onchange="formSubmit(this)" name="gridRadios" id="gridRadios2" value="roi" >
+            }
             
-            <th>
-                Mã đơn hàng
-            </th>
-            <th>
-                Tên khách hàng
-            </th>
-            <th width="200">
-                Thông tin đơn hàng
-            </th>
-            <th>
-                Tổng tiền
-            </th>
-            <th>
-                Ghi Chú
-            </th>
-            <th>
-                Ngày tạo
-            </th>
-            <th>
-                Xác nhận
-            </th>
-        </tr>
-
+            <label class="form-check-label" for="gridRadios2">
+                Đã xác nhận
+            </label>
+        </div>
+        <div class="col-md-4">
+            @if (ViewBag.type == 2)
+            {
+            <input class="form-check-input" type="radio" onchange="formSubmit(this)" name="gridRadios" id="gridRadios2" value="tuchoi" checked>
+            }
+            else
+            {
+                <input class="form-check-input" type="radio" onchange="formSubmit(this)" name="gridRadios" id="gridRadios2" value="tuchoi">
+            }
+            <label class="form-check-label" for="gridRadios2">
+                Đã từ chối
+            </label>
+        </div>
+       
+        
+    </div>
+   
+</div>
+<div class="containerProduct">
+    <div class="row">
         @foreach (var item in ViewBag.dsDonHang)
         {
-            <tr>
-               
-                <td>
-                    @item.MaDonHang
-                </td>
-                <td>
-                    @item.TenKhachHang
-                </td>
-                <td width="200">
-                    @item.TTDonHang
-                </td>
-                <td>
-                    @Html.FormatValue(item.TongTien, "{0:#,##0} đ")
-                   
-                </td>
-                <td>
-                    @item.GhiChu
-                </td>
-                <td>
-                    @item.NgayTao
-                </td>
-                <td>
-                    <a href="/Cart/AcceptOrder?id=@item.MaDonHang&isAccept=1"  class="btn btn-success">ok</a><a href="/Cart/AcceptOrder?id=@item.MaDonHang&&isAccept=2" style="margin-left:10px;"  class="btn btn-danger">X</a>
-                </td>
-               
-            </tr>
-                
+        <div class="col-md-3 itemProduct">
+            <a style="text-decoration:none;">
+                <img src="https://png.pngtree.com/png-clipart/20190904/original/pngtree-light-blue-shopping-cart-illustration-png-image_4500466.jpg" />
+                <h3>
+                    Khách Hàng: @item.TenKhachHang
+                </h3>
+            </a>
+            <p> Chi tiết: @item.TTDonHang </p>
+            <p>Tổng tiền: @Html.FormatValue(item.TongTien, "{0:#,##0} đ")</p>
+            <p>Ngày: @item.NgayTao</p>
+            @if (ViewBag.type == 0)
+            {
+                <div>
+                    <a href="/Cart/AcceptOrder?id=@item.MaDonHang&isAccept=1" class="btn btn-success">Ok</a>
+                    <a href="/Cart/AcceptOrder?id=@item.MaDonHang&isAccept=2" class="btn btn-danger">Cancel</a>
+                </div>
+            }
+
+        </div>
         }
-
-
-    </table>
+    </div>
 </div>
+<script>
+    function formSubmit(radioObj) {
+      
+        var link = "@Url.Action("QuanLyDOnHang", "Admin", new { type = 0 })";
+        switch (radioObj.value) {
+            case "chua":
+                link = "@Url.Action("QuanLyDOnHang", "Admin", new { type = 0 })";
+                break;
+            case "roi":
+                link = "@Url.Action("QuanLyDOnHang", "Admin", new { type = 1 })";
+                break;
+            case "tuchoi":
+                link = "@Url.Action("QuanLyDOnHang", "Admin", new { type = 2 })";
+                break;
+        }
+        
+        window.location.href = link;
+
+
+
+    }
+</script>
+
+
 
