add tra cứu đơn hàng

--- a/h2tshop/Views/Shared/_Layout.cshtml
+++ b/h2tshop/Views/Shared/_Layout.cshtml
@@ -215,7 +215,7 @@
                             H.Dẫn và C.sách
                             <ul class="dropdown_menu dropdown_menu--animated dropdown_menu-6">
                                 <li class="dropdown_item-1">Đổi trả</li>
-                                <li class="dropdown_item-2">Kiểm tra đơn</li>
+                                <li class="dropdown_item-2"><a href="/Admin/TraCuuDonHang?key=">Kiểm tra đơn</a></li>
 
                             </ul>
                         </li>
