--- a/h2tshop/Views/Admin/QuanLyDonHang.cshtml
+++ b/h2tshop/Views/Admin/QuanLyDonHang.cshtml
@@ -111,6 +111,8 @@
                 </h3>
             </a>
             <p> Chi tiết: @item.TTDonHang </p>
+            <p> Chi tiết: @item.GhiChu </p>
+            
             <p>Tổng tiền: @Html.FormatValue(item.TongTien, "{0:#,##0} đ")</p>
             <p>Ngày: @item.NgayTao</p>
             @if (ViewBag.type == 0)
