--- a/h2tshop/Views/Cart/ThanhToan.cshtml
+++ b/h2tshop/Views/Cart/ThanhToan.cshtml
@@ -8,34 +8,68 @@
         <div class="col-md-2" ></div>
         <div class="col-md-4 text-center">
             <h3> Thanh toán</h3>
-            <form method="post" action="/Cart/DatHang" >
-                <div class="form-row">
-                    <div class="form-group col-md-12">
-                        <input style="display:none;" type="text" name="Id" class="form-control" id="inputEmail4" value="@Model.Id" placeholder="Họ và tên">
-                        <input style="display:none;" type="text" name="Quyen" class="form-control" id="inputEmail4" value="@Model.Quyen" placeholder="Họ và tên">
-                        <input style="display:none;" type="text" name="TenDangNhap" class="form-control" id="inputEmail4" value="@Model.TenDangNhap" placeholder="Họ và tên">
-                        <input style="display:none;" type="text" name="MatKhau" class="form-control" id="inputEmail4" value="@Model.MatKhau" placeholder="Họ và tên">
-                        <input type="text" name="HoTen" class="form-control" id="inputEmail4" value="@Model.HoTen" placeholder="Họ và tên">
+            @if (Model != null)
+            {
+                <form method="post" action="/Cart/DatHang">
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+                            <input style="display:none;" type="text" name="Id" class="form-control" id="inputEmail4" value="@Model.Id" placeholder="Họ và tên">
+                            <input style="display:none;" type="text" name="Quyen" class="form-control" id="inputEmail4" value="@Model.Quyen" placeholder="Họ và tên">
+                            <input style="display:none;" type="text" name="TenDangNhap" class="form-control" id="inputEmail4" value="@Model.TenDangNhap" placeholder="Họ và tên">
+                            <input style="display:none;" type="text" name="MatKhau" class="form-control" id="inputEmail4" value="@Model.MatKhau" placeholder="Họ và tên">
+                            <input type="text" name="HoTen" class="form-control" id="inputEmail4" value="@Model.HoTen" placeholder="Họ và tên">
+                        </div>
                     </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
 
-                        <input type="email" name="Email" class="form-control" id="inputEmail4" placeholder="Email">
-                    </div>
-                    <div class="form-group col-md-6">
+                            <input type="email" name="Email" class="form-control" id="inputEmail4" placeholder="Email">
+                        </div>
+                        <div class="form-group col-md-6">
 
-                        <input type="number" name="SoDienThoai" class="form-control" id="inputPassword4" value="@Model.SoDienThoai" placeholder="Số điện thoại">
+                            <input type="number" name="SoDienThoai" class="form-control" id="inputPassword4" value="@Model.SoDienThoai" placeholder="Số điện thoại">
+                        </div>
                     </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-12">
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
 
-                        <input type="text" name="DiaChi" class="form-control" id="inputEmail4" value="@Model.DiaChi" placeholder="Địa chỉ">
+                            <input type="text" name="DiaChi" class="form-control" id="inputEmail4" value="@Model.DiaChi" placeholder="Địa chỉ">
+                        </div>
                     </div>
-                </div>
-                <input style="display:block;margin: 0 auto;padding:10px 25px;" type="submit" value="Xác nhận" class="btn btn-primary" />
-            </form>
+                    <input style="display:block;margin: 0 auto;padding:10px 25px;" type="submit" value="Xác nhận" class="btn btn-primary" />
+                </form>
+            }
+            else
+            {
+                <form method="post" action="/Cart/DatHang">
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+                            <input style="display:none;" type="text" name="Id" class="form-control" id="inputEmail4"  placeholder="Họ và tên">
+                            <input style="display:none;" type="text" name="Quyen" class="form-control" id="inputEmail4"  placeholder="Họ và tên">
+                            <input style="display:none;" type="text" name="TenDangNhap" class="form-control" id="inputEmail4"  placeholder="Họ và tên">
+                            <input style="display:none;" type="text" name="MatKhau" class="form-control" id="inputEmail4"  placeholder="Họ và tên">
+                            <input type="text" name="HoTen" class="form-control" id="inputEmail4"  placeholder="Họ và tên">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+
+                            <input type="email" name="Email" class="form-control" id="inputEmail4" placeholder="Email">
+                        </div>
+                        <div class="form-group col-md-6">
+
+                            <input type="number" name="SoDienThoai" class="form-control" id="inputPassword4"  placeholder="Số điện thoại">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+
+                            <input type="text" name="DiaChi" class="form-control" id="inputEmail4"  placeholder="Địa chỉ">
+                        </div>
+                    </div>
+                    <input style="display:block;margin: 0 auto;padding:10px 25px;" type="submit" value="Xác nhận" class="btn btn-primary" />
+                </form>
+            }
         </div>
         <div class="col-md-6">
             @foreach (var item in ViewBag.listsp)
