--- a/h2tshop/Views/Home/Index.cshtml
+++ b/h2tshop/Views/Home/Index.cshtml
@@ -92,7 +92,7 @@
 </h5>
 
 <div class="row newproduct">
-    @foreach (var item in @ViewBag.listSPNew)
+    @foreach (var item in @ViewBag.listSPSale)
     {
         <div class="col-md-3 itemProduct">
             <a style="text-decoration:none;" href="/Product/detail?id=@item.MaSanPham">
