--- a/h2tshop/Views/Admin/QuanLyDonHang.cshtml
+++ b/h2tshop/Views/Admin/QuanLyDonHang.cshtml
@@ -53,7 +53,7 @@
 <h4 style="color: deepskyblue;">Danh sách đơn hàng</h4>
 <div style="margin: 20px;" class="row">
     <div class="col-md-5">
-       
+        <a href="/Admin/TraCuuDonHang?key=">Kiểm tra đơn</a>
     </div>
     <div class="col-md-2">
         <select id="mySelect" onchange="myFunction()" class="custom-select mr-sm-2" id="inlineFormCustomSelect">
